Näyttää henkilön tiedot ja henkilön asunnon tiedot.

--- a/AsuntoDB_WPF/AsuntoDB_WPF.csproj
+++ b/AsuntoDB_WPF/AsuntoDB_WPF.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Henkilo.cs">
       <DependentUpon>AsuntoDB_datamodel.tt</DependentUpon>
     </Compile>
+    <Compile Include="HenkiloMethods.cs" />
     <Compile Include="Sukupuoli.cs">
       <DependentUpon>AsuntoDB_datamodel.tt</DependentUpon>
     </Compile>
